Change title & add meta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hagoi Cloud - Cloud Gaming untuk Android</title>
+    <title>Hagoi Cloud - Play Anywhere on Android</title>
+    <meta name="description" content="Experience next-level cloud gaming on Android with Hagoi Cloud. Stream and play top PC games wherever you are, no high-end hardware needed.">
+    <meta name="keywords" content="cloud gaming, android, game streaming, hagoi cloud, mobile gaming, play pc games on android">
+    <meta name="author" content="Hagoi Cloud Team">
+    <meta name="robots" content="index, follow">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
