--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             
 
-            <a href="#download" class="block px-3 py-2 bg-hagoi-primary hidden md:flex whitespace-nowrap  hover:bg-indigo-700 text-white rounded-lg text-base font-medium flex items-center justify-center transition">
+            <a href="https://github.com/adiyaksa07/static-website-hgc/releases/download/beta/HagoiCloud-beta-tester.apk" class="block px-3 py-2 bg-hagoi-primary hidden md:flex whitespace-nowrap  hover:bg-indigo-700 text-white rounded-lg text-base font-medium flex items-center justify-center transition">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                 </svg>
@@ -501,7 +501,7 @@
             Download Hagoi Cloud now and enjoy high-quality gaming on your Android device.
         </p>
         <div class="flex flex-col sm:flex-row justify-center gap-4">
-            <a href="#" class="flex items-center justify-center bg-hagoi-primary hover:bg-indigo-700 text-white px-8 py-4 rounded-lg font-semibold transition">
+            <a href="https://github.com/adiyaksa07/static-website-hgc/releases/download/beta/HagoiCloud-beta-tester.apk" class="flex items-center justify-center bg-hagoi-primary hover:bg-indigo-700 text-white px-8 py-4 rounded-lg font-semibold transition">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                 </svg>
