--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     Enjoy high-end gaming on any Android device no downloads needed, just instant play through our powerful cloud servers.
                 </p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="#download" class="bg-hagoi-accent hover:bg-amber-600 text-white px-6 sm:px-8 py-3 rounded-full font-semibold text-center transition flex items-center justify-center">
+                    <a href="https://github.com/adiyaksa07/static-website-hgc/releases/download/beta/HagoiCloud-beta-tester.apk" class="bg-hagoi-accent hover:bg-amber-600 text-white px-6 sm:px-8 py-3 rounded-full font-semibold text-center transition flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                         </svg>
