--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center space-x-2 mb-6 md:mb-0">
-                    <img src="image/logo.png" class="h-10 w-10">
+                    <img src="https://www.svgrepo.com/show/530126/gamepad.svg" class="h-10 w-10">
                     <span class="text-2xl font-bold text-white">Hagoi Cloud</span>
                 </div>
                 <div class="flex flex-wrap justify-center gap-6 md:gap-10 mb-6 md:mb-0">
