--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="flex items-center justify-between h-16">
             <!-- Logo Section -->
             <div class="flex items-center space-x-2 flex-shrink-0">
-                <img src="image/logo.png" class="h-10 w-10">
+                <img src="https://www.svgrepo.com/show/530126/gamepad.svg" class="h-10 w-10">
                 <span class="text-2xl font-bold text-white">Hagoi Cloud</span>
             </div>
 
